--- a/simias/src/webservices/iFolderAdmin.fr.resx
+++ b/simias/src/webservices/iFolderAdmin.fr.resx
@@ -107,7 +107,7 @@
     <value>Journal</value>
   </data>
   <data name="ERRORINVALIDQUOTA">
-    <value>Une valeur non valide de quota d'espace disque a été spécifiée. La valeur doit être comprise entre 1 et 2e+063 - 1.</value>
+    <value>Une valeur de quota d'espace disque non valide a été spécifiée. La valeur doit être comprise entre 1 et 2e+063 - 1.</value>
   </data>
   <data name="WHEN">
     <value>Quand</value>
@@ -215,7 +215,7 @@
     <value>Télécharger</value>
   </data>
   <data name="USER">
-    <value>Utilisateur</value>
+    <value>User</value>
   </data>
   <data name="LOGINLANGUAGE">
     <value>Langue :</value>
@@ -329,13 +329,13 @@
     <value>Privé</value>
   </data>
   <data name="SESSIONCLOSED">
-    <value>Votre session a été fermée. Loguez-vous.</value>
+    <value>Votre session a été fermée. Please log in.</value>
   </data>
   <data name="USERSTAG">
     <value>Utilisateurs :</value>
   </data>
   <data name="ERRORIFOLDERDOESNOTEXIST">
-    <value>Le dossier IFolder n'existe pas.</value>
+    <value>Le dossier iFolder n'existe pas.</value>
   </data>
   <data name="EXCLUDEDFILES">
     <value>Fichiers exclus</value>
@@ -377,7 +377,7 @@
     <value>Nombre total d'utilisateurs :</value>
   </data>
   <data name="IFOLDERDISABLED">
-    <value>Disable Synchronization</value>
+    <value>Désactiver la synchronisation</value>
   </data>
   <data name="FRENCH">
     <value>Français</value>
@@ -487,8 +487,8 @@
   <data name="NEXTPAGE">
     <value>Page suivante</value>
   </data>
-  <data name="TOTALIFOLDERSTAG">
-    <value>Total de dossiers iFolder :</value>
+  <data name="ADD">
+    <value>Ajouter</value>
   </data>
   <data name="LAST">
     <value>Dernier</value>
@@ -542,7 +542,7 @@
     <value>Suivant</value>
   </data>
   <data name="OWNED">
-    <value>Propriétaire</value>
+    <value>Avec propriétaire</value>
   </data>
   <data name="MAXCONNECTIONSTAG">
     <value>Nombre maximum de connexions :</value>
@@ -600,6 +600,9 @@
   </data>
   <data name="SELECTEDUSERS">
     <value>Utilisateurs sélectionnés</value>
+  </data>
+  <data name="TOTALIFOLDERSTAG">
+    <value>Total de dossiers iFolder :</value>
   </data>
   <data name="UNKNOWNERROR">
     <value>Une erreur inconnue s'est produite. Aucune exception n'a été spécifiée.</value>
@@ -664,6 +667,9 @@
   <data name="ERRORACCESSEXCEPTION">
     <value>Vous ne disposez pas de droits suffisants pour exécuter la requête.</value>
   </data>
+  <data name="SYNCNOW">
+    <value>Synchroniser maintenant</value>
+  </data>
   <data name="NAMETAG">
     <value>Nom :</value>
   </data>
@@ -710,10 +716,10 @@
     <value>Impossible de définir les informations de stratégie système.</value>
   </data>
   <data name="MINUTES">
-    <value>Minute(s)</value>
+    <value>minute(s)</value>
   </data>
   <data name="ALL">
-    <value>Tous</value>
+    <value>Tout</value>
   </data>
   <data name="TYPE">
     <value>Type</value>
@@ -808,8 +814,8 @@
   <data name="USERDETAILS">
     <value>Détails de l'utilisateur</value>
   </data>
-  <data name="ADD">
-    <value>Ajouter</value>
+  <data name="IDENTITYSYNCTAG">
+    <value>Synchronisation d'identités</value>
   </data>
   <data name="IFOLDERADMINS">
     <value>Administrateurs iFolder</value>
