--- a/simias/src/webservices/iFolderAdmin.ru.resx
+++ b/simias/src/webservices/iFolderAdmin.ru.resx
@@ -98,25 +98,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="SHARED">
-    <value>Совместно используется</value>
+    <value>Совместное использование</value>
   </data>
   <data name="LOGOUT">
     <value>Разрегистрация</value>
   </data>
   <data name="LOGTAG">
-    <value>Журнал</value>
+    <value>Регистрация</value>
   </data>
   <data name="ERRORINVALIDQUOTA">
-    <value>В качестве квоты дискового пространства указано недопустимое значение. Требуется значение от 1 до 2e+063 - 1.</value>
+    <value>Указано неверное значение квоты дискового пространства. Диапазон значений: 1 и 2e+063 - 1.</value>
   </data>
   <data name="WHEN">
     <value>Когда</value>
   </data>
   <data name="LOGINSECUREFAILED">
-    <value>Защищенное взаимодействие с сервером iFolder невозможно.</value>
+    <value>Не удается взаимодействовать с сервером iFolder в защищенном режиме.</value>
   </data>
   <data name="LOGINSENDFAILED">
-    <value>Взаимодействие с сервером iFolder невозможно.</value>
+    <value>Не удается взаимодействовать с сервером iFolder.</value>
   </data>
   <data name="SAVE">
     <value>Сохранить</value>
@@ -131,10 +131,10 @@
     <value>День:</value>
   </data>
   <data name="WEEKLY">
-    <value>еженедельно</value>
+    <value>Еженедельно</value>
   </data>
   <data name="MONTHLY">
-    <value>ежемесячно</value>
+    <value>Ежемесячно</value>
   </data>
   <data name="DELETE">
     <value>Удалить</value>
@@ -155,13 +155,13 @@
     <value>Нет</value>
   </data>
   <data name="ERRORCANNOTADDMEMBER">
-    <value>Невозможно добавить члена {0} для папки iFolder {1}.</value>
+    <value>Невозможно добавить пользователя {0} для iFolder {1}.</value>
   </data>
   <data name="IFOLDERDETAILS">
-    <value>Информация о папке iFolder</value>
+    <value>Информация iFolder</value>
   </data>
   <data name="ACCESSLOGFILE">
-    <value>Доступ пользователя</value>
+    <value>Доступ пользователей</value>
   </data>
   <data name="DISABLE">
     <value>Запретить</value>
@@ -176,19 +176,19 @@
     <value>Недоступно</value>
   </data>
   <data name="FILETYPEALREADYEXISTS">
-    <value>Указанное имя файла уже есть в списке.</value>
+    <value>Указанное имя файла уже существует в списке.</value>
   </data>
   <data name="GENERATEDAILYREPORT">
-    <value>Создавать отчет каждый день в {0} для {1}</value>
+    <value>Формировать отчет каждый день с {0} до {1}</value>
   </data>
   <data name="LOGINERROR">
     <value>Ошибка:</value>
   </data>
   <data name="ERRORINVALIDFILESIZE">
-    <value>Указано недопустимое ограничение размера файла. Требуется значение от 1 до 2e+063 - 1.</value>
+    <value>Указано неверное значение ограничения на размер файла. Диапазон значений: 1 и 2e+063 - 1.</value>
   </data>
   <data name="DNSNAME">
-    <value>Имя DNS</value>
+    <value>DNS-имя</value>
   </data>
   <data name="SYNCHRONIZATION">
     <value>Синхронизация</value>
@@ -200,10 +200,10 @@
     <value>В:</value>
   </data>
   <data name="ADDADMINS">
-    <value>Добавление администраторов</value>
+    <value>Добавить администраторов</value>
   </data>
   <data name="B">
-    <value>байт</value>
+    <value>B</value>
   </data>
   <data name="FIRSTPAGE">
     <value>Первая страница</value>
@@ -212,7 +212,7 @@
     <value>Главный</value>
   </data>
   <data name="DOWNLOAD">
-    <value>Загрузить</value>
+    <value>Загрузка</value>
   </data>
   <data name="USER">
     <value>Пользователь</value>
@@ -221,13 +221,13 @@
     <value>Язык:</value>
   </data>
   <data name="ERRORMEMBERDOESNOTEXIST">
-    <value>Член iFolder не существует.</value>
+    <value>Пользователь iFolder не существует.</value>
   </data>
   <data name="REPORTDIRECTORY">
-    <value>Каталог для отчета</value>
+    <value>Каталог отчета</value>
   </data>
   <data name="LOGINTRUSTFAILED">
-    <value>Отсутствие соответствия критериям на доверие между сервером iFolder и веб-клиентом iFolder.</value>
+    <value>Отсутствие соответствия критериям между сервером iFolder и веб-клиентом iFolder.</value>
   </data>
   <data name="ELLIPSES">
     <value> . . .</value>
@@ -248,10 +248,10 @@
     <value>Только чтение</value>
   </data>
   <data name="ASSIGNADMINISTRATORS">
-    <value>Назначение администраторов</value>
+    <value>Назначить администраторов</value>
   </data>
   <data name="WARN">
-    <value>Внимание</value>
+    <value>Предупреждение</value>
   </data>
   <data name="LDAPSTATUSTAG">
     <value>Состояние LDAP:</value>
@@ -284,10 +284,10 @@
     <value>Португальский</value>
   </data>
   <data name="CONFIGUREREPORTING">
-    <value>Конфигурация отчета</value>
+    <value>Настройка системы отчетов</value>
   </data>
   <data name="ERRORCANNOTSETIFOLDERPOLICY">
-    <value>Невозможно установить информацию о политике для папки iFolder с идентификатором {0}.</value>
+    <value>Невозможно установить информацию о политике для ИД iFolder {0}.</value>
   </data>
   <data name="REPORTIFOLDERTAG">
     <value>iFolder:</value>
@@ -302,7 +302,7 @@
     <value>Член</value>
   </data>
   <data name="DAILY">
-    <value>ежедневно</value>
+    <value>Ежедневно</value>
   </data>
   <data name="RIGHTS">
     <value>Права</value>
@@ -326,7 +326,7 @@
     <value>Изменено:</value>
   </data>
   <data name="HOME">
-    <value>Личная папка</value>
+    <value>Основной</value>
   </data>
   <data name="SESSIONCLOSED">
     <value>Сеанс закрыт. Зарегистрируйтесь.</value>
@@ -341,7 +341,7 @@
     <value>Исключенные файлы</value>
   </data>
   <data name="ENABLED">
-    <value>Разрешено</value>
+    <value>Включено</value>
   </data>
   <data name="ERRORCANNOTDELETEIFOLDER">
     <value>Невозможно удалить папку iFolder.</value>
@@ -359,16 +359,16 @@
     <value>Папки iFolder</value>
   </data>
   <data name="UNLIMITED">
-    <value>Без ограничений</value>
+    <value>Без ограничения</value>
   </data>
   <data name="SERVERLOGS">
     <value>Журналы сервера</value>
   </data>
   <data name="DNSNAMETAG">
-    <value>Имя DNS:</value>
+    <value>DNS-имя:</value>
   </data>
   <data name="USERLOGINDISABLED">
-    <value>Запрет регистрации пользователя</value>
+    <value>Отключить пользовательские регистрации</value>
   </data>
   <data name="DISKSPACEUSEDTAG">
     <value>Используемое дисковое пространство:</value>
@@ -377,22 +377,22 @@
     <value>Всего пользователей:</value>
   </data>
   <data name="IFOLDERDISABLED">
-    <value>Запрет синхронизации</value>
+    <value>Выключить синхронизацию</value>
   </data>
   <data name="FRENCH">
     <value>Французский</value>
   </data>
   <data name="NEWFILETYPE">
-    <value>Новый тип файла</value>
+    <value>Тип нового файла</value>
   </data>
   <data name="ERRORCANNOTREMOVEADMIN">
-    <value>Невозможно удалить права администратора для пользователя {0}.</value>
+    <value>Невозможно удалить пользователя {0} как администратора.</value>
   </data>
   <data name="PUBLICIPTAG">
     <value>Внешний IP-адрес:</value>
   </data>
   <data name="CREATENEWIFOLDER">
-    <value>Создание папки iFolder</value>
+    <value>Создать новую папку iFolder</value>
   </data>
   <data name="MESSAGEINFORMATION">
     <value>Информация:</value>
@@ -404,22 +404,22 @@
     <value>Состояние сервера</value>
   </data>
   <data name="GENERATEWEEKLYREPORT">
-    <value>Создавать отчет в {0} в {1} для {2}</value>
+    <value>Формировать отчет каждые {0} в {1} для {2}</value>
   </data>
   <data name="FIRST">
     <value>Первый</value>
   </data>
   <data name="ERRORNOQUOTA">
-    <value>Не указано значение квоты дискового пространства.</value>
+    <value>Не указано значение квоты диска.</value>
   </data>
   <data name="INTERVALTAG">
     <value>Интервал:</value>
   </data>
   <data name="OFF">
-    <value>Откл.</value>
+    <value>Выкл.</value>
   </data>
   <data name="LOGINREDIRECT">
-    <value>Необходимо обновить URL-адрес сервера iFolder.</value>
+    <value>URL-адрес сервера iFolder нужно обновить.</value>
   </data>
   <data name="TITLE">
     <value>Администратор iFolder</value>
@@ -437,16 +437,16 @@
     <value>Имя пользователя</value>
   </data>
   <data name="ENABLE">
-    <value>Разрешить</value>
+    <value>Включить</value>
   </data>
   <data name="ERRORCANNOTCHANGERIGHTS">
-    <value>Невозможно изменить параметры владения для пользователя {0}.</value>
+    <value>Невозможно изменить права на членство для пользователя {0}.</value>
   </data>
   <data name="LOGINCONNECTFAILED">
     <value>Невозможно подключиться к серверу iFolder.</value>
   </data>
   <data name="ERRORLOCKEXCEPTION">
-    <value>Операция отменена, так как папка iFolder была заблокирована или запрещена администратором.</value>
+    <value>Операция была отменена, так как папка iFolder была заблокирована или запрещена администратором.</value>
   </data>
   <data name="ADMINISTRATOR">
     <value>Администратор</value>
@@ -455,7 +455,7 @@
     <value>Русский</value>
   </data>
   <data name="REMOVEMEMBERS">
-    <value>Удаление пользователей</value>
+    <value>Удаленные пользователи</value>
   </data>
   <data name="FILENAME">
     <value>Имя файла</value>
@@ -467,28 +467,28 @@
     <value>Сервер</value>
   </data>
   <data name="ENABLEDTAG">
-    <value>Разрешено:</value>
+    <value>Включено:</value>
   </data>
   <data name="LOGINFAILED">
     <value>Сбой:</value>
   </data>
   <data name="PRIVATEIPTAG">
-    <value>Внутренний IP-адрес:</value>
+    <value>Частный IP-адрес:</value>
   </data>
   <data name="ERRORCANNOTADDADMIN">
-    <value>Невозможно добавить члена {0} в качестве администратора.</value>
+    <value>Невозможно добавить пользователя {0} как администратора.</value>
   </data>
   <data name="ERRORCANNOTCHANGEOWNER">
-    <value>Невозможно изменить параметры владения для папки iFolder.</value>
+    <value>Невозможно изменить членство iFolder.</value>
   </data>
   <data name="SELECTIFOLDEROWNER">
-    <value>Выберите владельца iFolder "{0}"</value>
+    <value>Выберите владельца для папки "{0}"</value>
   </data>
   <data name="NEXTPAGE">
     <value>Следующая страница</value>
   </data>
-  <data name="TOTALIFOLDERSTAG">
-    <value>Всего папок iFolder:</value>
+  <data name="ADD">
+    <value>Добавить</value>
   </data>
   <data name="LAST">
     <value>Последний</value>
@@ -497,7 +497,7 @@
     <value>Португальский (Бразилия)</value>
   </data>
   <data name="POLISH">
-    <value>Внешний IP-адрес:</value>
+    <value>Польский</value>
   </data>
   <data name="DISKQUOTA">
     <value>Квота диска</value>
@@ -512,16 +512,16 @@
     <value>Внешний IP-адрес</value>
   </data>
   <data name="LOGINNOSCRIPT">
-    <value>Необходимо включить сценарии в навигаторе.</value>
+    <value>Необходимо включить сценарии в средстве просмотра.</value>
   </data>
   <data name="GENERATEMONTHLYREPORT">
-    <value>Создавать отчет {0} числа каждого месяца в {1} для {2}</value>
+    <value>Формировать отчет в {0} день каждого месяца в {1} для {2}</value>
   </data>
   <data name="LOGINLOGOUT">
-    <value>Вы разрегистрированы в iFolder.</value>
+    <value>Вы разрегистрированы в системе iFolder.</value>
   </data>
   <data name="EFFECTIVETAG">
-    <value>Эффективно:</value>
+    <value>Действующий:</value>
   </data>
   <data name="LOGINPASSWORD">
     <value>Пароль:</value>
@@ -539,19 +539,19 @@
     <value>Отчеты сервера</value>
   </data>
   <data name="NEXT">
-    <value>Следующий</value>
+    <value>Далее</value>
   </data>
   <data name="OWNED">
-    <value>С владельцем</value>
+    <value>Владелец</value>
   </data>
   <data name="MAXCONNECTIONSTAG">
-    <value>Максимальное число соединений:</value>
+    <value>Максимум подключений:</value>
   </data>
   <data name="CANCEL">
     <value>Отмена</value>
   </data>
   <data name="FATAL">
-    <value>Фатальная ошибка</value>
+    <value>Фатальный</value>
   </data>
   <data name="USERNAMETAG">
     <value>Имя пользователя:</value>
@@ -560,7 +560,7 @@
     <value>Регистрация</value>
   </data>
   <data name="PRIVATEURI">
-    <value>Внутренний IP-адрес</value>
+    <value>Частный IP-адрес</value>
   </data>
   <data name="IFOLDERSTAG">
     <value>Папки iFolder:</value>
@@ -569,7 +569,7 @@
     <value>Поиск</value>
   </data>
   <data name="ERRORTYPE">
-    <value>Неожиданная ошибка</value>
+    <value>Непредвиденная ошибка</value>
   </data>
   <data name="FIRSTNAME">
     <value>Имя</value>
@@ -596,10 +596,13 @@
     <value>Текст CSV</value>
   </data>
   <data name="SELECTUSERS">
-    <value>Выбор пользователей</value>
+    <value>Выберите пользователей</value>
   </data>
   <data name="SELECTEDUSERS">
     <value>Выбранные пользователи</value>
+  </data>
+  <data name="TOTALIFOLDERSTAG">
+    <value>Всего папок iFolder:</value>
   </data>
   <data name="UNKNOWNERROR">
     <value>Неизвестная ошибка. Исключение не указано.</value>
@@ -638,22 +641,22 @@
     <value>Последняя страница</value>
   </data>
   <data name="CONTAINS">
-    <value>содержит</value>
+    <value>Содержит</value>
   </data>
   <data name="ERRORNOFILESIZE">
-    <value>Не указано ограничение размера файла.</value>
+    <value>Ограничение на размер файла не указано.</value>
   </data>
   <data name="LOGLEVELTAG">
     <value>Уровень протоколирования</value>
   </data>
   <data name="ERRORCANNOTCREATEIFOLDER">
-    <value>Невозможно создать папку iFolder.</value>
+    <value>Невозможно создать iFolder.</value>
   </data>
   <data name="LOGINNOCOOKIES">
-    <value>Необходимо включить файлы Cookie в навигаторе.</value>
+    <value>Необходимо включить файлы "Cookie" в средстве просмотра.</value>
   </data>
   <data name="OK">
-    <value>ОК</value>
+    <value>OK</value>
   </data>
   <data name="PENDING">
     <value>Отложено</value>
@@ -663,6 +666,9 @@
   </data>
   <data name="ERRORACCESSEXCEPTION">
     <value>Недостаточно прав для выполнения этого запроса.</value>
+  </data>
+  <data name="SYNCNOW">
+    <value>Синхронизировать сейчас</value>
   </data>
   <data name="NAMETAG">
     <value>Имя:</value>
@@ -677,10 +683,10 @@
     <value>Фамилия:</value>
   </data>
   <data name="AVAILABLETAG">
-    <value>Доступен:</value>
+    <value>Доступно:</value>
   </data>
   <data name="BEGINSWITH">
-    <value>начинается с</value>
+    <value>Начинается с</value>
   </data>
   <data name="LOGGEDINAS">
     <value>Зарегистрирован как</value>
@@ -701,16 +707,16 @@
     <value>Ошибка</value>
   </data>
   <data name="ENDSWITH">
-    <value>оканчивается на</value>
+    <value>Заканчивается на</value>
   </data>
   <data name="DISKSPACEAVAILABLETAG">
     <value>Доступное дисковое пространство:</value>
   </data>
   <data name="ERRORCANNOTSETSYSTEMPOLICY">
-    <value>Невозможно установить информацию о политике для системы.</value>
+    <value>Невозможно установить информацию о политике.</value>
   </data>
   <data name="MINUTES">
-    <value>мин.</value>
+    <value>Мин.</value>
   </data>
   <data name="ALL">
     <value>Все</value>
@@ -749,7 +755,7 @@
     <value>{0} - {1} из {2} {3}</value>
   </data>
   <data name="ERRORNOSYNCINTERVAL">
-    <value>Не указаны интервалы синхронизации.</value>
+    <value>Интервал синхронизации не указан.</value>
   </data>
   <data name="FILESIZE">
     <value>Размер файла</value>
@@ -758,10 +764,10 @@
     <value>Итальянский</value>
   </data>
   <data name="ERRORAUTHENTICATIONFAILED">
-    <value>Сбой аутентификации.</value>
+    <value>Сбой при аутентификации.</value>
   </data>
   <data name="ENABLEREPORTING">
-    <value>Разрешение отчетов</value>
+    <value>Включить формирование отчетов</value>
   </data>
   <data name="SESSIONSTAG">
     <value>Сеансы:</value>
@@ -785,7 +791,7 @@
     <value>Владелец:</value>
   </data>
   <data name="ADDMEMBERSTOIFOLDER">
-    <value>Добавление дополнительных членов для iFolder "{0}"</value>
+    <value>Добавление дополнительных пользователей для iFolder "{0}"</value>
   </data>
   <data name="ALLFIELDSREQUIRED">
     <value>Необходимо заполнить все поля.</value>
@@ -794,22 +800,22 @@
     <value>Имя</value>
   </data>
   <data name="ADDMEMBERS">
-    <value>Добавление членов iFolder</value>
+    <value>Добавить пользователей iFolder</value>
   </data>
   <data name="FILES">
     <value>Файлы</value>
   </data>
   <data name="RETYPEPASSWORDTAG">
-    <value>Подтверждение пароля:</value>
+    <value>Повторный ввод пароля:</value>
   </data>
   <data name="ERRORCANNOTDELETEUSER">
-    <value>Невозможно удалить идентификатор пользователя {0}.</value>
+    <value>Невозможно удалить ИД пользователя {0}.</value>
   </data>
   <data name="USERDETAILS">
     <value>Информация о пользователе</value>
   </data>
-  <data name="ADD">
-    <value>Добавить</value>
+  <data name="IDENTITYSYNCTAG">
+    <value>Синхронизация электронных персон</value>
   </data>
   <data name="IFOLDERADMINS">
     <value>Администраторы iFolder</value>
@@ -824,13 +830,13 @@
     <value>Используется:</value>
   </data>
   <data name="REPORTIFOLDER">
-    <value>Папка iFolder для отчета</value>
+    <value>Создать отчет iFolder</value>
   </data>
   <data name="WEBACCESSLOGFILE">
     <value>Веб-доступ</value>
   </data>
   <data name="ERRORINVALIDSYNCINTERVAL">
-    <value>Указан недопустимый интервал синхронизации. Требуется значение от 5 до 2e+063 - 1.</value>
+    <value>Указан неверный интервал синхронизации. Диапазон значений: от 5 до 2e+031 - 1.</value>
   </data>
   <data name="IFOLDERUSERS">
     <value>Пользователи iFolder</value>
@@ -845,10 +851,10 @@
     <value>Члены</value>
   </data>
   <data name="EVERYTAG">
-    <value>Интервал:</value>
+    <value>Каждые:</value>
   </data>
   <data name="ERRORCANNOTDELETEMEMBERS">
-    <value>Невозможно удалить члена iFolder {0}.</value>
+    <value>Невозможно удалить члена папки iFolder {0}.</value>
   </data>
   <data name="SYSTEM">
     <value>Система</value>
@@ -857,7 +863,7 @@
     <value>Администраторы</value>
   </data>
   <data name="ERRORCANNOTSETUSERPOLICY">
-    <value>Невозможно установить информацию о политике для пользователя с идентификатором {0}.</value>
+    <value>Невозможно установить информацию политики пользователей для ИД пользователя {0}.</value>
   </data>
   <data name="SYSTEMSETTINGS">
     <value>Параметры системы</value>
@@ -869,10 +875,10 @@
     <value>Да</value>
   </data>
   <data name="CREATEUSER">
-    <value>Создание пользователя</value>
+    <value>Создать пользователя</value>
   </data>
   <data name="IFOLDERISOWNEDBY">
-    <value>С владельцем {0}</value>
+    <value>Владелец: {0}</value>
   </data>
   <data name="SLAVE">
     <value>Подчиненный</value>
