--- a/simias/src/webservices/iFolderAdmin.zh-CN.resx
+++ b/simias/src/webservices/iFolderAdmin.zh-CN.resx
@@ -98,19 +98,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="SHARED">
-    <value>共享的</value>
+    <value>共享</value>
   </data>
   <data name="LOGOUT">
     <value>注销</value>
   </data>
   <data name="LOGTAG">
-    <value>登录</value>
+    <value>日志</value>
   </data>
   <data name="ERRORINVALIDQUOTA">
-    <value>指定了无效的磁盘空间定额值。该值必须介于 1 和 2e+063 - 1 之间。</value>
+    <value>指定的磁盘空间额度值无效。该值必须介于 1 和 2e+063 - 1 之间。</value>
   </data>
   <data name="WHEN">
-    <value>何时</value>
+    <value>当</value>
   </data>
   <data name="LOGINSECUREFAILED">
     <value>无法与 iFolder 服务器进行安全通讯。</value>
@@ -155,7 +155,7 @@
     <value>否</value>
   </data>
   <data name="ERRORCANNOTADDMEMBER">
-    <value>无法将成员 {0} 添加至 iFolder {1}。</value>
+    <value>无法将成员 {0} 添加到 iFolder {1} 中。</value>
   </data>
   <data name="IFOLDERDETAILS">
     <value>iFolder 细节</value>
@@ -176,16 +176,16 @@
     <value>不可用</value>
   </data>
   <data name="FILETYPEALREADYEXISTS">
-    <value>指定的文件名已存在于列表中。</value>
+    <value>指定的文件名在列表中已经存在。</value>
   </data>
   <data name="GENERATEDAILYREPORT">
-    <value>每天 {0} 生成 {1} 的报告</value>
+    <value>每天在 {0} 中生成 {1} 的报告</value>
   </data>
   <data name="LOGINERROR">
     <value>错误：</value>
   </data>
   <data name="ERRORINVALIDFILESIZE">
-    <value>指定了无效的文件大小限制值。该值必须介于 1 和 2e+063 - 1 之间。</value>
+    <value>指定的文件大小限制值无效。该值必须介于 1 和 2e+063 - 1 之间。</value>
   </data>
   <data name="DNSNAME">
     <value>DNS 名称</value>
@@ -221,7 +221,7 @@
     <value>语言：</value>
   </data>
   <data name="ERRORMEMBERDOESNOTEXIST">
-    <value>iFolder 成员不存在。</value>
+    <value>此 iFolder 成员不存在。</value>
   </data>
   <data name="REPORTDIRECTORY">
     <value>报告目录</value>
@@ -287,16 +287,16 @@
     <value>配置报告</value>
   </data>
   <data name="ERRORCANNOTSETIFOLDERPOLICY">
-    <value>无法为 iFolder ID {0} 设置策略信息。</value>
+    <value>无法设置 iFolder ID {0} 的策略信息。</value>
   </data>
   <data name="REPORTIFOLDERTAG">
     <value>iFolder：</value>
   </data>
   <data name="NOITEMSFOUND">
-    <value>未找到项。</value>
+    <value>未找到项目。</value>
   </data>
   <data name="LASTMODIFIED">
-    <value>上次修改</value>
+    <value>上次修改时间</value>
   </data>
   <data name="MEMBER">
     <value>成员</value>
@@ -320,13 +320,13 @@
     <value>频率</value>
   </data>
   <data name="LOGINACCOUNTLOCKED">
-    <value>您的帐户当前已被锁定，不可使用。</value>
+    <value>您的帐户当前已被锁定且不可用。</value>
   </data>
   <data name="MODIFIEDTAG">
     <value>已修改：</value>
   </data>
   <data name="HOME">
-    <value>主页</value>
+    <value>主目录</value>
   </data>
   <data name="SESSIONCLOSED">
     <value>会话已关闭。请登录。</value>
@@ -335,13 +335,13 @@
     <value>用户：</value>
   </data>
   <data name="ERRORIFOLDERDOESNOTEXIST">
-    <value>iFolder 不存在。</value>
+    <value>此 iFolder 不存在。</value>
   </data>
   <data name="EXCLUDEDFILES">
-    <value>已排除的文件</value>
+    <value>排除的文件</value>
   </data>
   <data name="ENABLED">
-    <value>启用</value>
+    <value>已启用</value>
   </data>
   <data name="ERRORCANNOTDELETEIFOLDER">
     <value>无法删除 iFolder。</value>
@@ -386,10 +386,10 @@
     <value>新文件类型</value>
   </data>
   <data name="ERRORCANNOTREMOVEADMIN">
-    <value>无法以管理员身份去除用户 {0}。</value>
+    <value>无法删除管理员用户 {0}。</value>
   </data>
   <data name="PUBLICIPTAG">
-    <value>公用 IP 地址：</value>
+    <value>公共 IP 地址：</value>
   </data>
   <data name="CREATENEWIFOLDER">
     <value>创建新 iFolder</value>
@@ -404,13 +404,13 @@
     <value>服务器状态</value>
   </data>
   <data name="GENERATEWEEKLYREPORT">
-    <value>每 {0} 天在 {1} 生成 {2} 的报告</value>
+    <value>每 {0} 在 {1} 中生成 {2} 的报告</value>
   </data>
   <data name="FIRST">
-    <value>第一次</value>
+    <value>第一</value>
   </data>
   <data name="ERRORNOQUOTA">
-    <value>未指定磁盘空间定额值。</value>
+    <value>未指定磁盘空间额度值。</value>
   </data>
   <data name="INTERVALTAG">
     <value>间隔：</value>
@@ -425,7 +425,7 @@
     <value>iFolder 管理员</value>
   </data>
   <data name="READWRITE">
-    <value>读写</value>
+    <value>读/写</value>
   </data>
   <data name="ADMIN">
     <value>管理</value>
@@ -446,7 +446,7 @@
     <value>无法连接到 iFolder 服务器。</value>
   </data>
   <data name="ERRORLOCKEXCEPTION">
-    <value>该操作已取消，因为管理员已锁定/禁用 iFolder。</value>
+    <value>操作被取消，因为 iFolder 已被管理员锁定/禁用。</value>
   </data>
   <data name="ADMINISTRATOR">
     <value>管理员</value>
@@ -461,7 +461,7 @@
     <value>文件名</value>
   </data>
   <data name="LOGINACCOUNTDISABLED">
-    <value>您的帐户当前已被禁用，不可使用。</value>
+    <value>您的帐户当前已被禁用且不可用。</value>
   </data>
   <data name="SERVER">
     <value>服务器</value>
@@ -473,22 +473,22 @@
     <value>失败：</value>
   </data>
   <data name="PRIVATEIPTAG">
-    <value>专用 IP 地址：</value>
+    <value>私用 IP 地址：</value>
   </data>
   <data name="ERRORCANNOTADDADMIN">
-    <value>无法以管理员身份添加成员 {0}。</value>
+    <value>无法将成员 {0} 添加为管理员。</value>
   </data>
   <data name="ERRORCANNOTCHANGEOWNER">
     <value>无法更改 iFolder 所有权。</value>
   </data>
   <data name="SELECTIFOLDEROWNER">
-    <value>为 iFolder“{0}”选择所有者</value>
+    <value>选择 iFolder“{0}”的拥有者</value>
   </data>
   <data name="NEXTPAGE">
     <value>下一页</value>
   </data>
-  <data name="TOTALIFOLDERSTAG">
-    <value>iFolder 总数：</value>
+  <data name="ADD">
+    <value>添加</value>
   </data>
   <data name="LAST">
     <value>上次</value>
@@ -500,7 +500,7 @@
     <value>波兰语</value>
   </data>
   <data name="DISKQUOTA">
-    <value>磁盘定额</value>
+    <value>磁盘额度</value>
   </data>
   <data name="TRUE">
     <value>True</value>
@@ -509,13 +509,13 @@
     <value>信息</value>
   </data>
   <data name="PUBLICURI">
-    <value>公用 IP 地址</value>
+    <value>公共 IP 地址</value>
   </data>
   <data name="LOGINNOSCRIPT">
     <value>您必须在浏览器中启用底稿。</value>
   </data>
   <data name="GENERATEMONTHLYREPORT">
-    <value>在每月 {0} 日的 {1} 生成 {2} 的报告</value>
+    <value>每月的第 {0} 天在 {1} 中生成 {2} 的报告</value>
   </data>
   <data name="LOGINLOGOUT">
     <value>您将立即从 iFolder 注销。</value>
@@ -542,16 +542,16 @@
     <value>下一步</value>
   </data>
   <data name="OWNED">
-    <value>拥有</value>
+    <value>拥有的</value>
   </data>
   <data name="MAXCONNECTIONSTAG">
-    <value>最多连接数：</value>
+    <value>最大连接数：</value>
   </data>
   <data name="CANCEL">
     <value>取消</value>
   </data>
   <data name="FATAL">
-    <value>致命</value>
+    <value>致命的</value>
   </data>
   <data name="USERNAMETAG">
     <value>用户名：</value>
@@ -560,7 +560,7 @@
     <value>登录</value>
   </data>
   <data name="PRIVATEURI">
-    <value>专用 IP 地址</value>
+    <value>私用 IP 地址</value>
   </data>
   <data name="IFOLDERSTAG">
     <value>iFolder：</value>
@@ -581,13 +581,13 @@
     <value>无法创建用户。</value>
   </data>
   <data name="LDAPCONTEXTTAG">
-    <value>LDAP 环境：</value>
+    <value>Ldap 环境：</value>
   </data>
   <data name="SPANISH">
     <value>西班牙语</value>
   </data>
   <data name="LOGINCOPYRIGHT">
-    <value>&amp;copy; Copyright 2006 Novell, Inc. 版权所有。</value>
+    <value>&amp;copy; 版权所有 2006 Novell, Inc. 保留所有权利。</value>
   </data>
   <data name="DEBUG">
     <value>调试</value>
@@ -601,8 +601,11 @@
   <data name="SELECTEDUSERS">
     <value>所选用户</value>
   </data>
+  <data name="TOTALIFOLDERSTAG">
+    <value>iFolder 总计：</value>
+  </data>
   <data name="UNKNOWNERROR">
-    <value>发生了未知错误。未指定任何异常。</value>
+    <value>发生了未知错误。未指定异常。</value>
   </data>
   <data name="SET">
     <value>设置</value>
@@ -659,10 +662,13 @@
     <value>待发</value>
   </data>
   <data name="OWNER">
-    <value>所有者</value>
+    <value>拥有者</value>
   </data>
   <data name="ERRORACCESSEXCEPTION">
     <value>您没有足够的权限来执行此请求。</value>
+  </data>
+  <data name="SYNCNOW">
+    <value>立即同步</value>
   </data>
   <data name="NAMETAG">
     <value>名称：</value>
@@ -713,10 +719,10 @@
     <value>分钟</value>
   </data>
   <data name="ALL">
-    <value>全部</value>
+    <value>所有</value>
   </data>
   <data name="TYPE">
-    <value>键入</value>
+    <value>类型</value>
   </data>
   <data name="STATUSTAG">
     <value>状态：</value>
@@ -728,7 +734,7 @@
     <value>错误：{0}</value>
   </data>
   <data name="BACK">
-    <value>返回</value>
+    <value>后退</value>
   </data>
   <data name="ERRORINSTRUCTIONS">
     <value>&lt;p&gt;iFolder 万维网访问遇到意外错误。&lt;/p&gt;&lt;p&gt;我们对给您带来的不便深感抱歉，并请求您注销并重试。&lt;/p&gt;</value>
@@ -773,7 +779,7 @@
     <value>全名</value>
   </data>
   <data name="PASSWORDSDONOTMATCH">
-    <value>口令不相同。</value>
+    <value>口令不一致。</value>
   </data>
   <data name="PATHTAG">
     <value>路径：</value>
@@ -782,10 +788,10 @@
     <value>姓</value>
   </data>
   <data name="OWNERTAG">
-    <value>所有者：</value>
+    <value>拥有者：</value>
   </data>
   <data name="ADDMEMBERSTOIFOLDER">
-    <value>向 iFolder“{0}”添加其他成员</value>
+    <value>将其他成员添加到 iFolder“{0}”中</value>
   </data>
   <data name="ALLFIELDSREQUIRED">
     <value>必须填充所有的字段。</value>
@@ -800,7 +806,7 @@
     <value>文件</value>
   </data>
   <data name="RETYPEPASSWORDTAG">
-    <value>请再次键入口令：</value>
+    <value>再次键入口令：</value>
   </data>
   <data name="ERRORCANNOTDELETEUSER">
     <value>无法删除用户 ID {0}。</value>
@@ -808,8 +814,8 @@
   <data name="USERDETAILS">
     <value>用户细节</value>
   </data>
-  <data name="ADD">
-    <value>添加</value>
+  <data name="IDENTITYSYNCTAG">
+    <value>身份同步</value>
   </data>
   <data name="IFOLDERADMINS">
     <value>iFolder 管理员</value>
@@ -830,13 +836,13 @@
     <value>万维网访问</value>
   </data>
   <data name="ERRORINVALIDSYNCINTERVAL">
-    <value>指定了无效的同步间隔。该值必须介于 5 和 2e+031 - 1 之间。</value>
+    <value>指定的同步间隔无效。该值必须介于 5 和 2e+031 - 1 之间。</value>
   </data>
   <data name="IFOLDERUSERS">
     <value>iFolder 用户</value>
   </data>
   <data name="LOGGEDONUSERSTAG">
-    <value>登录用户：</value>
+    <value>登录的用户：</value>
   </data>
   <data name="SIZE">
     <value>大小</value>
@@ -857,7 +863,7 @@
     <value>管理员</value>
   </data>
   <data name="ERRORCANNOTSETUSERPOLICY">
-    <value>无法设置用户 ID {0} 的用户策略信息。</value>
+    <value>无法为用户 ID {0} 设置用户策略信息。</value>
   </data>
   <data name="SYSTEMSETTINGS">
     <value>系统设置</value>
@@ -872,7 +878,7 @@
     <value>创建用户</value>
   </data>
   <data name="IFOLDERISOWNEDBY">
-    <value>由 {0} 所有</value>
+    <value>为 {0} 所拥有</value>
   </data>
   <data name="SLAVE">
     <value>从</value>
